--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(HDRS
     enemy_game_object.h
     patrol_chase_enemy_game_object.h
     charge_enemy_game_object.h
+    collectible_game_object.h
 )
  
 set(SRCS
@@ -39,6 +40,7 @@ set(SRCS
     enemy_game_object.cpp
     patrol_chase_enemy_game_object.cpp
     charge_enemy_game_object.cpp
+    collectible_game_object.cpp
     sprite_vertex_shader.glsl
     sprite_fragment_shader.glsl
     particle_vertex_shader.glsl
